@@ -1,4 +1,4 @@
-FROM eclipse-temurin:21-jdk-alpine AS build
+FROM eclipse-temurin:25-jdk-alpine AS build
 WORKDIR /app
 
 COPY gradlew .
@@ -31,4 +31,5 @@ USER server
 EXPOSE 8080
 ENTRYPOINT ["java", \
             "-XX:+UseG1GC", \
+            "-XX:+UseCompactObjectHeaders", \
             "-jar", "app.jar"]
